--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
              </a>
            </div>
            <div class="program__card">
-             <img src="bodybuilder.png" alt="building" />
+             <img src="bodybuilder.jpg" alt="building" />
              <h4>Body Building</h4>
              <p>
                Sculpt and define your physique with targeted workouts, expert
